# AsciiAmp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: image.hpp  music.hpp  playback.hpp  temp.hpp  utils.hpp
spotDL/: README.md
src/: main.cpp
